<resources>
    <string name="app_name">Lab8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Masha</string>
    <string name="nav_header_subtitle">truefalsemary@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="rate_app">Rate app</string>

    <string name="new_group">New group</string>
    <string name="new_secret_chat">New secret chat</string>
    <string name="create_channel">Create channel</string>
    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="calls">Calls</string>
    <string name="invite">Invite friends</string>
    <string name="settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>