<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_group"
            android:icon="@drawable/new_group"
            android:title="@string/new_group" />
        <item
            android:id="@+id/new_secret_chat"
            android:icon="@drawable/new_secret_chat"
            android:title="@string/new_secret_chat" />
        <item
            android:id="@+id/create_chanel"
            android:icon="@drawable/create_channel"
            android:title="@string/create_channel" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/contacts"
                android:icon="@drawable/contacts"
                android:title="@string/contacts" />
            <item
                android:id="@+id/favorites"
                android:icon="@drawable/favorites"
                android:title="@string/favorites" />
            <item
                android:id="@+id/calls"
                android:icon="@drawable/calls"
                android:title="@string/calls" />
            <item
                android:id="@+id/invite"
                android:icon="@drawable/invite"
                android:title="@string/invite" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
        </menu>

    </item>
</menu>